# GEF-Causation-LLMs

./: .gitignore  README.md  baseline_nb.ipynb  baseline_rf.ipynb  baselines_nb_rf.ipynb  binder_poetry_to_requirements.sh  causation-bootstrap.ipynb  causation-corpus.ipynb  causation-cotsc-corpus.ipynb  causation-cotsc.ipynb  causation-fewshot-standard.ipynb  causation-fewshot.ipynb  causation-zeroshot.ipynb  causation_bert.ipynb  kappa.ipynb  openai_embeddings.ipynb  pyproject.toml  requirements.txt  sampling.ipynb
causation/: __init__.py  utils.py  widget.py
causation/classifiers/: cotsc.py
causation/sampler/: sampler.py
notebooks/: causation-fewshot-sequenced.ipynb  kappa.ipynb
scripts/: init_env.dev.sh
